# PheTK

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/PheTK/: PheWAS.py
