[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PheTK"
version = "0.1.0"
description = "Phenome-wide association study (PheWAS) toolkit"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "adjusttext",
    "connectorx",
    "google-cloud-bigquery",
    "hail",
    "lxml",
    "matplotlib",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "statsmodels",
    "tqdm",
    "setuptools",
    "firthlogist"
]
requires-python = ">=3.7"
