[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PheTK"
version = "0.1.0"
description = "The Phenotype Toolkit for PheWAS"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name="Your Name", email="your@email.com" }
]
dependencies = [
    "adjusttext",
    "connectorx",
    "google-cloud-bigquery",
    "hail",
    "lxml",
    "matplotlib",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "statsmodels",
    "firthlogist",
    "tqdm",
    "setuptools"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"": "src"}
packages = ["PheTK"]

[tool.setuptools.package-data]
"PheTK.phecode" = ["*.csv"]
